# callgraph-viz

./: Cargo.toml
assets/: input.py  input2.py  scc.py
src/: generate_graph.rs  main.rs  visualize.rs
