[package]
name = "callgraph-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = { version = "0.12.0", features = ["file_watcher"] }
bevy_prototype_lyon = "0.10.0"
bevy_tweening = { version = "0.9.0", features = ["bevy_sprite"] }
logos = "0.13.0"
notify-debouncer-full = "0.3.1"
rand = "0.8.5"
rustpython-ast = "0.3.0"
rustpython-parser = "0.3.0"
